2020-10-16  Wenson Hsieh  <wenson_hsieh@apple.com>

        Add system trace points for flushing remote image buffers
        https://bugs.webkit.org/show_bug.cgi?id=217853

        Reviewed by Simon Fraser.

        See WebKit ChangeLog for more details.

        * Tracing/SystemTracePoints.plist:

2020-10-16  Ryosuke Niwa  <rniwa@webkit.org>

        IPC testing API should expose whether a given IPC message has sync reply or not
        https://bugs.webkit.org/show_bug.cgi?id=217861

        Reviewed by Darin Adler.

        Added a test for IPC.messages.*.isSync using RunJavaScriptAlert.

        * TestWebKitAPI/Tests/WebKitCocoa/IPCTestingAPI.mm:
        (createWebViewWithIPCTestingAPI): Extracted to share more code between tests.
        (IPCTestingAPI.AlertIsSyncMessage): Added.

2020-10-16  Antoine Quint  <graouts@webkit.org>

        Enable individual CSS transform properties by default
        https://bugs.webkit.org/show_bug.cgi?id=217849
        <rdar://problem/70052493>

        Reviewed by Dean Jackson.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (enableExperimentalFeatures):
        * DumpRenderTree/win/DumpRenderTree.cpp:
        (enableExperimentalFeatures):

2020-10-16  Jiewen Tan  <jiewen_tan@apple.com>

        [WebAuthn] Remove experimental feature flag: WebAuthenticationLocalAuthenticatorEnabled
        https://bugs.webkit.org/show_bug.cgi?id=217796
        <rdar://problem/70358912>

        Reviewed by Brent Fulgham.

        * TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
        (TestWebKitAPI::TEST):
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetPreferencesToConsistentValues):
        * WebKitTestRunner/TestOptions.cpp:
        (WTR::boolDefaultsMap):
        (WTR::keyTypeMap):
        * WebKitTestRunner/TestOptions.h:
        (WTR::TestOptions::enableWebAuthentication const):
        (WTR::TestOptions::enableWebAuthenticationLocalAuthenticator const): Deleted.
