@@ -1,3 +1,14 @@
+2020-10-17  Philippe Normand  <pnormand@igalia.com>
+
+        [Flatpak SDK] flatpakutils.py reports "KeyError: 'gcc'" error if using with icecc and toolchains aren't generated yet
+        https://bugs.webkit.org/show_bug.cgi?id=217799
+
+        Reviewed by Fujii Hironori.
+
+        * flatpak/flatpakutils.py:
+        (WebkitFlatpak.run_in_sandbox): Gracefully exit with an error message when the icecc
+        configuration failed to complete.
+
 2020-10-16  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         Add system trace points for flushing remote image buffers
